<resources>
    <string name="app_name">SmogDetector</string>
    <string name="func_cut">裁剪</string>
    <string name="func_mode">模式</string>
    <string name="func_confirm">确认</string>
    <string name="title_activity_edit">EditActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="edit_title">图像编辑</string>
    <string name="album_title">照片图库</string>
    <string name="album_edit">编辑</string>
    <string name="album_confirm">确认</string>
    <string name="takePicConfirm">照片确认</string>
    <string name="do_edit_title">图像裁剪</string>
</resources>