<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--cancel 设计-->
    <ImageView
        android:id="@+id/album_edit_chose_cancel"
        android:layout_width="@dimen/cross_size"
        android:layout_height="@dimen/cross_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@android:drawable/ic_delete" />
    <Button
        android:id="@+id/edit_cancel_frame"
        android:layout_width="@dimen/cross_size"
        android:layout_height="@dimen/cross_size"
        android:background="@drawable/cir_rectangle"
        app:backgroundTint="@null"

        app:layout_constraintBottom_toBottomOf="@+id/album_edit_chose_cancel"
        app:layout_constraintEnd_toEndOf="@+id/album_edit_chose_cancel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/album_edit_chose_cancel"
        app:layout_constraintTop_toTopOf="@+id/album_edit_chose_cancel"
        app:layout_constraintVertical_bias="1.0" />

    <!--标题-->
    <TextView
        android:id="@+id/pic_edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_title"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/edit_pic_upper_dirver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toEndOf="@+id/album_edit_chose_cancel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481" />

    <!--上分割线-->
    <View
        android:id="@+id/edit_pic_upper_dirver"
        android:layout_width="409dp"
        android:layout_height="@dimen/devider_size"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/edit_pic_lower_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/album_edit_chose_cancel"
        app:layout_constraintVertical_bias="0.021" />

    <!--下分割线-->
    <View
        android:id="@+id/edit_pic_lower_divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.867" />

    <!--编辑功能设置-->
    <Button
        android:id="@+id/func_cut"
        android:layout_width="112dp"
        android:layout_height="59dp"
        android:background="@drawable/cir_rectangle_color"
        android:text="@string/func_cut"
        android:textColor="@color/purple_200"
        android:textSize="25sp"
        app:backgroundTint="@null"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_pic_lower_divider"
        app:layout_constraintVertical_bias="0.589" />

    <Button
        android:id="@+id/func_mode"
        android:layout_width="112dp"
        android:layout_height="59dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/cir_rectangle_color"
        android:text="@string/func_mode"
        android:textColor="@color/purple_200"
        android:textSize="25sp"

        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toEndOf="@+id/func_cut"
        app:layout_constraintTop_toTopOf="@+id/edit_pic_lower_divider"
        app:layout_constraintVertical_bias="0.657" />

    <Button
        android:id="@+id/func_confirm"
        android:layout_width="112dp"
        android:layout_height="59dp"
        android:background="@drawable/cir_rectangle_color"
        android:text="@string/func_confirm"
        android:textColor="@color/purple_200"
        android:textSize="25sp"

        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toEndOf="@+id/func_mode"
        app:layout_constraintTop_toTopOf="@+id/edit_pic_lower_divider"
        app:layout_constraintVertical_bias="0.589" />




</androidx.constraintlayout.widget.ConstraintLayout>